samples/_failures_safe/1761181678_09ea65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc6bfcdd.c:161: error: expected ‘;’, ‘,’ or ‘)’ at end of input
